# cardano-network-service-assurance

./: INSTALL.md  README.md  cabal.project  cnsa.cabal
TODO/: 2023-08-11-cardano-node-service-assurance-review.md  TaskList.md  tracing-analysis.md
app/: cnsa-sink.hs
config/: c-tracer-config-reforwarding.yaml  c-tracer-config.yaml  config-oldtracing.json  config-p2p.yaml  config.yaml  topology-p2p.json  topology.json
delays/: Delays.hs
doc/: Analyses.md  DesignAndArchitecture.md  RunningCNSA.md
locli-src/Cardano/Unlog/: LogObject.hs
scripts/: spinup.sh  variables.sh
src/Cardano/Tracer/CNSA/: BlockState.hs  CnsaAnalyses.hs  CnsaSink.hs  ParseLogs.hs
src/Cardano/Tracer/CNSA/Analysis/: Catalog.hs  Types.hs
src/Cardano/Tracer/CNSA/Analysis/Catalog/BlockState/: Analysis.hs  DB.hs  Types.hs
src/Cardano/Tracer/CNSA/Analysis/Catalog/CountTraceLogs/: Analysis.hs
src/Cardano/Tracer/CNSA/Analysis/Catalog/SamplerBandwidth/: Analysis.hs
src/Cardano/Tracer/CNSA/Analysis/Catalog/Throughput/: Analysis.hs
src/Cardano/Tracer/CNSA/BlockState/: DB.hs
src/Cardano/Tracer/CNSA/Run/: CnsaSink.hs  ParseLogs.hs  PlumbAnalyses.hs
src/Cardano/Utils/: Log.hs  SlotTimes.hs
src/Util/Data/: Map.hs
